[gd_scene load_steps=5 format=3 uid="uid://cxh87ohp40lqy"]

[ext_resource type="Script" uid="uid://vx4jbewog220" path="res://Scripts/game.gd" id="1_lbhrr"]
[ext_resource type="PackedScene" uid="uid://cqwjckfdt3xc3" path="res://Stages/Stage1.tscn" id="2_iywne"]
[ext_resource type="PackedScene" uid="uid://wt0gwdugt257" path="res://scenes/adaline.tscn" id="3_p57ef"]
[ext_resource type="PackedScene" uid="uid://do3sstujhlre6" path="res://scenes/inferno.tscn" id="4_u5sy4"]

[node name="Game" type="Node2D"]
script = ExtResource("1_lbhrr")

[node name="Stage1" parent="." instance=ExtResource("2_iywne")]
position = Vector2(5, 11)

[node name="Adaline" parent="." instance=ExtResource("3_p57ef")]
position = Vector2(452, 790)
collision_layer = 2

[node name="Inferno" parent="." instance=ExtResource("4_u5sy4")]
position = Vector2(784, 821)
collision_layer = 2

[node name="CameraTarget" type="Node2D" parent="."]
position = Vector2(983, 727)

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="CameraTarget"]
position = Vector2(1, -1)
remote_path = NodePath("../../Camera2D")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(984, 726)

[node name="p1_life" type="ColorRect" parent="Camera2D"]
offset_left = -894.0
offset_top = -460.0
offset_right = -351.0
offset_bottom = -397.0

[node name="p2_life" type="ColorRect" parent="Camera2D"]
offset_left = 349.0
offset_top = -456.0
offset_right = 892.0
offset_bottom = -393.0
